OSL script crashes blender #37194

Closed
opened 2013-10-23 18:34:25 +02:00 by Joseph Masaki · 4 comments

%%%--- Operating System, Graphics card ---
Tested on:
- Win64 Home Premium
- GeForce GT 555M
- Intel Core i5-2430 2.40 GHz
- 8 gigs of ram
And vm of Xubuntu 13.04 on same machine

- Blender version with error, and version that worked ---

Blender-2.69-RC3 60885
and Blender-2.68 58537
Didn't test a version of blender it didn't crash on.

- Short description of error ---

Switching to rendered mode with osl script activated crashes blender.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Switch to rendered mode%%%

%%%--- Operating System, Graphics card --- Tested on: - Win64 Home Premium - GeForce GT 555M - Intel Core i5-2430 2.40 GHz - 8 gigs of ram And vm of Xubuntu 13.04 on same machine - Blender version with error, and version that worked --- Blender-2.69-RC3 60885 and Blender-2.68 58537 Didn't test a version of blender it didn't crash on. - Short description of error --- Switching to rendered mode with osl script activated crashes blender. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Switch to rendered mode%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I can confirm the crash.
It is the "Shader" keyword that is likely causing this (in the posted blend an input closure is named "Shader" - if this is renamed to "Shader2" it works).

backtrace


0 0x0000000002c68ba8 in ccl::set_default_value (input=0x0, b_node=..., b_sock=..., b_data=...,

  b_id=...)
  at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:112

1 0x0000000002c6e614 in ccl::add_nodes (scene=0x770ae80, b_data=..., b_scene=..., graph=0x759b260,

Python Exception <type 'exceptions.IndexError'> list index out of range:
Python Exception <type 'exceptions.IndexError'> list index out of range:

  b_ntree=..., proxy_input_map=std::map with 0 elements, proxy_output_map=std::map with 0 elements)
  at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:830

2 0x0000000002c6ed8a in ccl::add_nodes (scene=0x770ae80, b_data=..., b_scene=..., graph=0x759b260,

  b_ntree=...)
  at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:868

3 0x0000000002c6f083 in ccl::BlenderSync::sync_materials (this=0x7599ed0, update_all=false)

  at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:894

4 0x0000000002c6ff40 in ccl::BlenderSync::sync_shaders (this=0x7599ed0)

  at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:1055

5 0x0000000002c34438 in ccl::BlenderSync::sync_data (this=0x7599ed0, b_v3d=..., b_override=...,

  layer=0x0)
  at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_sync.cpp:143

6 0x0000000002c271c4 in ccl::BlenderSession::create_session (this=0x73a7830)

  at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_session.cpp:105

7 0x0000000002c26ba8 in ccl::BlenderSession::BlenderSession (this=0x73a7830, b_engine_=...,

  b_userpref_=..., b_data_=..., b_scene_=..., b_v3d_=..., b_rv3d_=..., width_=748, height_=734)
  at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_session.cpp:71

8 0x0000000002c1ef6a in ccl::create_func (self=0x7fffec67bcf8, args=0x7fffec6609b0)

  at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_python.cpp:97
  • 9 0x00000037b5f0cb99 in PyEval_EvalFrameEx () from /lib64/libpython3.3m.so.1.0
  • 10 0x00000037b5f0e485 in PyEval_EvalCodeEx () from /lib64/libpython3.3m.so.1.0
  • 11 0x00000037b5f0c607 in PyEval_EvalFrameEx () from /lib64/libpython3.3m.so.1.0
  • 12 0x00000037b5f0e485 in PyEval_EvalCodeEx () from /lib64/libpython3.3m.so.1.0
  • 13 0x00000037b5e85086 in function_call () from /lib64/libpython3.3m.so.1.0
  • 14 0x00000037b5e5f13c in PyObject_Call () from /lib64/libpython3.3m.so.1.0

15 0x0000000001e68880 in bpy_class_call (C=0x5d2da18, ptr=0x7fffffffdcd0,

  func=0x57dcf40 <rna_RenderEngine_view_update_func>, parms=0x7fffffffdcb0)
  at /home/philippo/workspace/Blender_trunk/blender/source/blender/python/intern/bpy_rna.c:7258

16 0x0000000002b0e509 in engine_view_update (engine=0x73a3de8, context=0x5d2da18)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/makesrna/intern/rna_render.c:131

17 0x000000000198d2de in view3d_main_area_draw_engine (C=0x5d2da18, ar=0x750c5c8, clip_border=true,

  border_rect=0x7fffffffdd90)
  at /home/philippo/workspace/Blender_trunk/blender/source/blender/editors/space_view3d/view3d_draw.c:2984

18 0x000000000198eaeb in view3d_main_area_draw (C=0x5d2da18, ar=0x750c5c8)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/editors/space_view3d/view3d_draw.c:3502

19 0x0000000001ce9a9b in ED_region_do_draw (C=0x5d2da18, ar=0x750c5c8)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/editors/screen/area.c:435

20 0x000000000189fe40 in wm_method_draw_triple (C=0x5d2da18, win=0x74ebc08)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_draw.c:617

21 0x00000000018a0642 in wm_draw_update (C=0x5d2da18)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_draw.c:846

22 0x000000000189be17 in WM_main (C=0x5d2da18)

  at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm.c:465

23 0x000000000189b0f1 in main (argc=1, argv=0x7fffffffdfe8)

  at /home/philippo/workspace/Blender_trunk/blender/source/creator/creator.c:1711%%%
%%%I can confirm the crash. It is the "Shader" keyword that is likely causing this (in the posted blend an input closure is named "Shader" - if this is renamed to "Shader2" it works). backtrace **** # 0 0x0000000002c68ba8 in ccl::set_default_value (input=0x0, b_node=..., b_sock=..., b_data=..., ``` b_id=...) at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:112 ``` # 1 0x0000000002c6e614 in ccl::add_nodes (scene=0x770ae80, b_data=..., b_scene=..., graph=0x759b260, Python Exception <type 'exceptions.IndexError'> list index out of range: Python Exception <type 'exceptions.IndexError'> list index out of range: ``` b_ntree=..., proxy_input_map=std::map with 0 elements, proxy_output_map=std::map with 0 elements) at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:830 ``` # 2 0x0000000002c6ed8a in ccl::add_nodes (scene=0x770ae80, b_data=..., b_scene=..., graph=0x759b260, ``` b_ntree=...) at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:868 ``` # 3 0x0000000002c6f083 in ccl::BlenderSync::sync_materials (this=0x7599ed0, update_all=false) ``` at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:894 ``` # 4 0x0000000002c6ff40 in ccl::BlenderSync::sync_shaders (this=0x7599ed0) ``` at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_shader.cpp:1055 ``` # 5 0x0000000002c34438 in ccl::BlenderSync::sync_data (this=0x7599ed0, b_v3d=..., b_override=..., ``` layer=0x0) at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_sync.cpp:143 ``` # 6 0x0000000002c271c4 in ccl::BlenderSession::create_session (this=0x73a7830) ``` at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_session.cpp:105 ``` # 7 0x0000000002c26ba8 in ccl::BlenderSession::BlenderSession (this=0x73a7830, b_engine_=..., ``` b_userpref_=..., b_data_=..., b_scene_=..., b_v3d_=..., b_rv3d_=..., width_=748, height_=734) at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_session.cpp:71 ``` # 8 0x0000000002c1ef6a in ccl::create_func (self=0x7fffec67bcf8, args=0x7fffec6609b0) ``` at /home/philippo/workspace/Blender_trunk/blender/intern/cycles/blender/blender_python.cpp:97 ``` - 9 0x00000037b5f0cb99 in PyEval_EvalFrameEx () from /lib64/libpython3.3m.so.1.0 - 10 0x00000037b5f0e485 in PyEval_EvalCodeEx () from /lib64/libpython3.3m.so.1.0 - 11 0x00000037b5f0c607 in PyEval_EvalFrameEx () from /lib64/libpython3.3m.so.1.0 - 12 0x00000037b5f0e485 in PyEval_EvalCodeEx () from /lib64/libpython3.3m.so.1.0 - 13 0x00000037b5e85086 in function_call () from /lib64/libpython3.3m.so.1.0 - 14 0x00000037b5e5f13c in PyObject_Call () from /lib64/libpython3.3m.so.1.0 # 15 0x0000000001e68880 in bpy_class_call (C=0x5d2da18, ptr=0x7fffffffdcd0, ``` func=0x57dcf40 <rna_RenderEngine_view_update_func>, parms=0x7fffffffdcb0) at /home/philippo/workspace/Blender_trunk/blender/source/blender/python/intern/bpy_rna.c:7258 ``` # 16 0x0000000002b0e509 in engine_view_update (engine=0x73a3de8, context=0x5d2da18) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/makesrna/intern/rna_render.c:131 ``` # 17 0x000000000198d2de in view3d_main_area_draw_engine (C=0x5d2da18, ar=0x750c5c8, clip_border=true, ``` border_rect=0x7fffffffdd90) at /home/philippo/workspace/Blender_trunk/blender/source/blender/editors/space_view3d/view3d_draw.c:2984 ``` # 18 0x000000000198eaeb in view3d_main_area_draw (C=0x5d2da18, ar=0x750c5c8) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/editors/space_view3d/view3d_draw.c:3502 ``` # 19 0x0000000001ce9a9b in ED_region_do_draw (C=0x5d2da18, ar=0x750c5c8) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/editors/screen/area.c:435 ``` # 20 0x000000000189fe40 in wm_method_draw_triple (C=0x5d2da18, win=0x74ebc08) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_draw.c:617 ``` # 21 0x00000000018a0642 in wm_draw_update (C=0x5d2da18) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm_draw.c:846 ``` # 22 0x000000000189be17 in WM_main (C=0x5d2da18) ``` at /home/philippo/workspace/Blender_trunk/blender/source/blender/windowmanager/intern/wm.c:465 ``` # 23 0x000000000189b0f1 in main (argc=1, argv=0x7fffffffdfe8) ``` at /home/philippo/workspace/Blender_trunk/blender/source/creator/creator.c:1711%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37194
No description provided.